tests/snapshots/ui__example_if_pass-2.snap
---
source: tests/ui.rs
expression: test_mini_c(file_contents)
---
Program(
  preamble: true,
  declarations: [
    Function(FunctionDeclaration(Int, "main", [], Some(Scope([
      VariableDeclaration(Int, [
        Normal("i"),
      ]),
    ], [
      Expression(Assignment(AssignmentExpression(Normal("i"), Value(Int(0))))),
      If(IfStatement(Binary(BinaryExpression(VariableReference(Normal("i")), Greater, Value(Int(0)))), Scope([], [
        Expression(FunctionCall(FunctionCallExpression("putint", [
          Binary(BinaryExpression(VariableReference(Normal("i")), Add, Value(Int(1)))),
        ]))),
        Expression(FunctionCall(FunctionCallExpression("putint", [
          Binary(BinaryExpression(VariableReference(Normal("i")), Add, Value(Int(10)))),
        ]))),
      ]), Some(Scope([], [
        Expression(FunctionCall(FunctionCallExpression("putint", [
          Binary(BinaryExpression(VariableReference(Normal("i")), Add, Value(Int(100)))),
        ]))),
      ])))),
      Return(ReturnStatement(Some(Value(Int(0))))),
    ])))),
  ],
)
